# polardb-storage-resizer

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  index.yaml  justfile  main.py  pyproject.toml
.cursor/plans/: polardb-storage-resizer-prod.plan.md
.github/workflows/: ci.yml  release.yml
charts/polardb-storage-resizer/: Chart.yaml  README.md  values-minimal.example.yaml  values-prod.example.yaml  values.yaml
charts/polardb-storage-resizer/templates/: NOTES.txt  _helpers.tpl  cronjob.yaml  serviceaccount.yaml
docs/: deployment.md
k8s/: cronjob.yaml  serviceaccount-rssa.yaml
src/polardb_storage_resizer/: __init__.py  aliyun_client.py  cloud_client.py  config.py  errors.py  executor.py  fake_client.py  logging_setup.py  main.py  metrics.py  models.py  redaction.py  strategy.py
tests/: TAG_FILTERS_RED_PHASE.md  __init__.py  conftest.py  test_cloud_client_contract.py  test_config.py  test_errors.py  test_executor.py  test_main_flow.py  test_redaction.py  test_strategy.py
tests/fixtures/: invalid_config.yaml  sample_clusters.json  sample_config.yaml
