[project]
name = "polardb-storage-resizer"
version = "0.1.0"
description = "PolarDB Storage Resizer - Automatically adjust PolarDB prepaid storage sizes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "alibabacloud-polardb20170801>=3.0.0",
    "alibabacloud-tea-openapi>=0.3.0",
    "alibabacloud-credentials>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "freezegun>=1.4",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.coverage.run]
data_file = ".cov/.coverage"

[tool.coverage.html]
directory = ".cov/html"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "alibabacloud_polardb20170801.*",
    "alibabacloud_tea_openapi.*",
    "alibabacloud_credentials.*",
    "Tea.*",
    "yaml.*",
]
ignore_missing_imports = true
